--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,7 @@ a:hover
          -o-transition: opacity 1s ease;
             transition: opacity 1s ease;
 
-    /*background: url(/img/canvetest.jpg);*/
+    background: url(../img/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
