--- a/css/main.css
+++ b/css/main.css
@@ -238,7 +238,7 @@ a:hover
     left: 0;
 
     width: 100%;
-    height: 50%;
+    height: 100%;
 
     -webkit-transition: opacity 1s ease;
          -o-transition: opacity 1s ease;
@@ -259,7 +259,7 @@ a:hover
         left: 0;
 
         width: 100%;
-        height: 60%;
+        height: 100vh;
     }
 }
 
