--- a/css/main.css
+++ b/css/main.css
@@ -238,17 +238,13 @@ a:hover
     left: 0;
 
     width: 100%;
-<<<<<<< HEAD
-    height: 50%;
-=======
     height: 100%;
->>>>>>> parent of 72a4855 (editheight)
 
     -webkit-transition: opacity 1s ease;
          -o-transition: opacity 1s ease;
             transition: opacity 1s ease;
 
-    background: url(img/canvetest.jpg);
+    background: url(../img/canvetest.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
